@@ -8,8 +8,14 @@ import java.time.LocalDateTime
 /** Base class for all events. */
 sealed class IrcEvent(val time: LocalDateTime)
 
+/** Raised when a connection to the server is being established. */
+class ServerConnecting(time: LocalDateTime) : IrcEvent(time)
+
 /** Raised when the connection to the server has been established. The server will not be ready for use yet. */
 class ServerConnected(time: LocalDateTime) : IrcEvent(time)
+
+/** Raised when the connection to the server has ended. */
+class ServerDisconnected(time: LocalDateTime) : IrcEvent(time)
 
 /** Raised when the server is ready for use. */
 class ServerReady(time: LocalDateTime) : IrcEvent(time)
